Se completó la paginación de la tabla de usuarios.

--- a/client/src/components/browser/browser.module.css
+++ b/client/src/components/browser/browser.module.css
@@ -1,4 +1,6 @@
 .container {
+    align-items: center;
+    display: flex;
     border: solid 1px var(--color-gray);
     border-radius: 8px;
     width: fit-content;
