--- a/client/src/components/selector/selector.module.css
+++ b/client/src/components/selector/selector.module.css
@@ -4,6 +4,7 @@
     border-radius: 8px;
     color: var(--color-gray);
     height: 40px;
+    margin-left: 30px;
     padding: 9px;
     width: 210px;
 }
